--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,22 +27,25 @@ body{
 
   }
   header{
-  width:100%;
-    height:50px;
-    border-top:1px solid #333;
-    background-color:#888;
-    border-bottom: 1px solid #333;
+
   }
   ul#menu{
-    padding: 0px;
+  list-style-type: none;
+    margin:0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #888;
+
+
   }
   ul#menu li {
-    display: inline;
+  float:left;
   }
   ul#menu li a{
+    display:block;
     background-color:#000;
     color:white;
-    padding: 10px 20px;
+    padding: 14px 16px;
     text-decoration:none;
     border-radius: 4px 4px 0 0;
   }
@@ -65,5 +68,5 @@ body{
   padding:4px;
 }
 footer{
-  width: 100%; text-align:center; color:#333; font-size:10px;
+  width: 100%; border-top:1pt solid #777; border-bottom: 1pt solid #777; text-align:center; color:#333; font-size:10px;
 }
