--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,9 +1,10 @@
  <div id="main">
 
        <h1>About</h1>
-     <nav><%= link_to "Home", root_path %>
-  <%= link_to "About", pages_about_path %>
-   </nav>
+         <ul id="menu">
+           <li><%= link_to "Home", root_path %></li>
+           <li> <%= link_to "About", pages_about_path %></li>
+       </ul>
    <hr>
  <div id="left">
     <h4>Here is a little story about us</h4>
