--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,10 +1,12 @@
  <div id="main">
 
        <h1>About</h1>
-         <ul id="menu">
-           <li><%= link_to "Home", root_path %></li>
-           <li> <%= link_to "About", pages_about_path %></li>
-       </ul>
+       <ul id="menu">
+         <li><%= link_to "Home", root_path %></li>
+         <li><%= link_to "About", pages_about_path %></li>
+         <li><%= link_to "Articles", articles_path %></li>
+     </ul>
+
    <hr>
  <div id="left">
     <h4>Here is a little story about us</h4>
