--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,15 +1,35 @@
+<style>
+
+</style>
 <div id="main">
-  <h1>Editing Article</h1>
+  <h1>Edit Article</h1>
+  <% if @article.errors.any? %>
+  <h2>The following errors prevented the article from being edited:</h2>
+  <ul>
+    <%= @article.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+<% end %>
        <ul id="menu">
          <li><%= link_to "Home", root_path %></li>
          <li><%= link_to "About", pages_about_path %></li>
-         <li><%= link_to "Articles", articles_path %></li>
+         <li><%= link_to "Alpha Blog", articles_path %></li>
      </ul>
-<div id="form"
-<%= render 'form' %>
 
-<%= link_to 'Show', @article %> |
-<%= link_to 'Back', articles_path %>
-     </div>
-  <footer>&copy2016 BadgerTex.com </footer>
+  <%=form_for @article do |f| %>
+  <p>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
+  </p>
+  <p>
+    <%= f.label :description %><br>
+    <%= f.text_area :description %>
+  </p>
+  <p>
+    <%= f.submit %>  |  <span id="back"><%= link_to 'Back', articles_path %></span>
+  </p>
+  <% end %>
+ <footer>&copy2016 BadgerTex.com</footer>
+
 </div>
