--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,9 +5,9 @@
        <ul id="menu">
          <li><%= link_to "Home", root_path %></li>
          <li><%= link_to "About", pages_about_path %></li>
-         <li><%= link_to "Articles", articles_path %></li>
+         <li><%= link_to "Alpha-Blog", articles_path %></li>
      </ul>
-
+  <p><%= link_to 'New Article', new_article_path %></p>
 <table>
   <thead>
     <tr>
@@ -22,9 +22,9 @@
       <tr>
         <td id="l"><%= article.title %></td>
         <td id="r"><%= article.description %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="show"><%= link_to 'Show  ', article %></td>
+        <td class="edit"><%= link_to 'Edit  ', edit_article_path(article) %></td>
+        <td class="destroy"><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -32,6 +32,6 @@
 
 <br>
 
-<%= link_to 'New Article', new_article_path %>
+
   <footer>&copy 2016 BadgerTex.com</footer>
 </div>
