--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -3,12 +3,12 @@
        <ul id="menu">
          <li><%= link_to "Home", root_path %></li>
          <li><%= link_to "About", pages_about_path %></li>
-         <li><%= link_to "Articles", articles_path %></li>
+         <li><%= link_to "Alpha-Blog", articles_path %></li>
      </ul>
 <div id="form">
 <%= render 'form' %>
 
-<%= link_to 'Back', articles_path %>
+<button id="back"><%= link_to 'Back', articles_path %></button>
     </div>
     <footer>&copy2016 BadgerTex.com</footer>
 </div>
