--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
        <ul id="menu">
          <li><%= link_to "Home", root_path %></li>
          <li><%= link_to "About", pages_about_path %></li>
-         <li><%= link_to "Articles", articles_path %></li>
+         <li><%= link_to "Alpha-Blog", articles_path %></li>
      </ul>
 <p>
   <strong>Title:</strong>
@@ -15,8 +15,9 @@
   <%= @article.description %>
 </p>
 
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
-
+  <span id="edit-button"> <%= link_to "Edit", edit_article_path(@article) %> </span>|<span id="back">
+  <%= link_to "Back", articles_path %></span>
+  <br>
+  <br>
   <footer>&copy2016 BadgerTex.com </footer>
 </div>
