--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,7 +4,7 @@
        <ul id="menu">
          <li><%= link_to "Home", root_path %></li>
          <li><%= link_to "About", pages_about_path %></li>
-         <li><%= link_to "Articles", articles_path %></li>
+         <li><%= link_to "Alpha-Blog", articles_path %></li>
      </ul>
 
    <hr>
@@ -21,6 +21,7 @@
     <hr>
     <%= image_tag 'sw1.jpg' %>
     <%= image_tag 'sw2.pmg.jpg' %>
+
 
   </div>
 
