--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,7 +5,7 @@
        <ul id="menu">
          <li><%= link_to "Home", root_path %></li>
          <li><%= link_to "About", pages_about_path %></li>
-         <li><%= link_to "Articles", articles_path %></li>
+         <li><%= link_to "Alpha-Blog", articles_path %></li>
      </ul>
 
 
