fixing overall display:

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,13 +19,16 @@ body{
 
   #main{
     width:1000px;
-    min-height:720px;
+
     border:1px solid #e4e4e4;
     margin:0px auto;
     padding: 0px 10px 10px 5px;
     background-color:#fff;
 
   }
+#sub{
+  min-height:720px;
+}
   header{
 
   }
