--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
  <div id="main">
-
+<div id="sub">
     <h1>Welcome to Badger &alpha;-Blog Application</h1>
 
        <ul id="menu">
@@ -17,5 +17,6 @@
    <p>The Enterprise computer system is controlled by three primary main processor cores, cross-linked with a redundant melacortz ramistat, fourteen kiloquad interface modules. Worf, It's better than music. It's jazz. Computer, belay that order. and attack the Romulans. The look in your eyes, I recognize it. You used to have it for me. Wait a minute - you've been declared dead. You can't give orders around here. Computer, lights up! Damage report! Wouldn't that bring about chaos? You did exactly what you had to do. You considered all your options, you tried every alternative and then you made the hard choice. Mr. Worf, you do remember how to fire phasers? You bet I'm agitated! I may be surrounded by insanity, but I am not insane. You enjoyed that.</p>
  <br>
     <br>
+   </div>
     <br><footer>&copy 2016 BadgerTex.com</footer>
   </div>
