--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -23,7 +23,7 @@
     <%= f.text_area :description %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit %>   |  <span id="back"><%= link_to 'Back', articles_path %></span>
   </div>
 <% end %>
 
