--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,5 @@
 <div id="main">
+  <div id="sub">
   <p id="notice"><%= notice %></p>
 
 <h1>Listing Articles</h1>
@@ -31,7 +32,7 @@
 </table>
 
 <br>
-
+  </div>
 
   <footer>&copy 2016 BadgerTex.com</footer>
 </div>
