--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,5 @@
   <div id="main">
+    <div id="sub">
   <h1>New Article</h1>
        <ul id="menu">
          <li><%= link_to "Home", root_path %></li>
@@ -8,7 +9,9 @@
 <div id="form">
 <%= render 'form' %>
 
-<button id="back"><%= link_to 'Back', articles_path %></button>
+
+    </div>
+
     </div>
     <footer>&copy2016 BadgerTex.com</footer>
 </div>
