--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,19 +1,11 @@
-<div id="main">
-  <div id="sub">
-  <p id="notice"><%= notice %></p>
-
+<p id="notice"><%= notice %></p>
 <h1>Listing Articles</h1>
-       <ul id="menu">
-         <li><%= link_to "Home", root_path %></li>
-         <li><%= link_to "About", pages_about_path %></li>
-         <li><%= link_to "Alpha-Blog", articles_path %></li>
-     </ul>
   <p><%= link_to 'New Article', new_article_path %></p>
-<table>
+<table >
   <thead>
     <tr>
-      <th id="l">Title</th>
-      <th id="r">Description</th>
+      <th class="tab-title">Title</th>
+      <th class="tab-desc">Description</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,8 +13,8 @@
   <tbody>
     <% @articles.each do |article| %>
       <tr>
-        <td id="l"><%= article.title %></td>
-        <td id="r"><%= article.description %></td>
+        <td class="tab-title"><%= article.title %></td>
+        <td class="tab-desc"><%= article.description %></td>
         <td class="show"><%= link_to 'Show  ', article %></td>
         <td class="edit"><%= link_to 'Edit  ', edit_article_path(article) %></td>
         <td class="destroy"><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -31,8 +23,3 @@
   </tbody>
 </table>
 
-<br>
-  </div>
-
-  <footer>&copy 2016 BadgerTex.com</footer>
-</div>
