--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-  <h1>Edit Article</h1>
+  <h1 align="center">Edit Article</h1>
 <hr>
   <% if @article.errors.any? %>
   <h2>The following errors prevented the article from being edited:</h2>
