--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,25 +1,36 @@
   <h1 align="center">Edit Article</h1>
-<hr>
-  <% if @article.errors.any? %>
-  <h2>The following errors prevented the article from being edited:</h2>
-  <ul>
-    <%= @article.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
+<%= render 'shared/errors', obj: @article %>
+
+  <div class='row'>
+  <div class='col-xs-12'>
+    <%= form_for(@article, :html =>{class:"form-horizontal", role:"form"}) do |f|%>
+
+  <div class="form-group">
+        <div class = "control-label col-sm-2">
+          <%= f.label :title %>
+        </div>
+        <div class="control-label col-sm-8" class="form-control">
+          <%= f.text_field :title, class:"form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :description %>
+        </div>
+         <div class="col-sm-8">
+            <%= f.text_area :description,  class:"form-control"%>
+        </div>
+      </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <%= f.submit class: 'btn btn-primary btn-lg' %>
+        </div>
+      </div>
     <% end %>
-  </ul>
-<% end %>
+<div class="col-xs-4 col-xs-offset-4">
 
-  <%=form_for @article do |f| %>
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit %>  |  <span id="back"><%= link_to 'Back', articles_path %></span>
-  </p>
-  <% end %>
+[ <%= link_to "Cancel request and return to articles listing", articles_path %> ]
 
+</div>
+
+</div>
