--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -34,6 +34,10 @@ $navbar-default-bg: #223850;
   font-size: 1.7 em;
   background-color: #000;
 }
+.btn-xs{
+  height:20px;
+ 
+}
   #left{
   float:left;
   border-top:1pt solid #333;
