--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<h1>Listing Articles</h1>
+<h1>Articles</h1>
   <p><%= link_to 'New Article', new_article_path %></p>
 
 <table id="articles" >
@@ -7,9 +7,8 @@
     <tr >
       <th class="tab-title">Title</th>
       <th class="tab-desc">Description</th>
-      <th class="show"></th>
-      <th class="edit"></th>
-      <th class="destroy"></th>
+      <th style="colspan:3"></th>
+
     </tr>
   </thead>
 
@@ -21,8 +20,8 @@
         <td class="tab-title" ><%= article.title %></td>
         <td class="tab-desc"><%= article.description %></td>
         <td class="btn btn-xs btn-primary"><%= link_to 'Show', article %></td>
-        <td class="edit btn btn-xs btn-info"><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td class="destroy btn btn-xs btn-danger"><%= link_to 'Delete', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="btn btn-xs btn-info"><%= link_to 'Edit', edit_article_path(article) %></td>
+        <td class="btn btn-xs btn-danger"><%= link_to 'Delete', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
