--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,18 +1,14 @@
+<p id="notice"><%= notice %></p>
+   <h2 align="center">Title: <%= @article.title %></h2>
+ <div class="well col-xs-8 col-xs-offset-2">
+   <h4 class="center description"><strong>Description:</strong></h4>
+   <hr>
+   <%=simple_format(@article.description) %>
+   <div class="article-actions">
+<%= link_to "Edit this Article", edit_article_path(@article),class:"btn btn-xs btn-primary" %>
+     <%= link_to "Delete this article", article_path(@article), method: :delete, data:{confirm: "Are you sure you want to delete this article?"}, class: "btn btn-xs btn-danger" %>
+     <%= link_to "View All Articles", articles_path, class: "btn btn-xs btn-success" %>
 
-  <p id="notice"><%= notice %></p>
-    <h1>Display Article</h1>
-
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @article.description %>
-</p>
-
-  <span id="edit-button"> <%= link_to "Edit", edit_article_path(@article) %> </span>|<span id="back">
-  <%= link_to "Back", articles_path %></span>
-  <br>
+   </div>
+</div>
 
