--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -73,14 +73,18 @@ $navbar-default-bg: #223850;
   margin-left: 15px;
 }
 
-  thead{
-  border-bottom: 1px solid #000;
-
-}
-
 .article_actions{
   border-top: 1px solid #333;
   padding-top: 5px;
+}
+.article-title{
+  font-weight: bold;
+  font-size: 1.5 em;
+}
+.article-body{
+  border-top: 1pt solid #333;
+  padding: 15px 0px;
+
 }
 .description{
   margin-top: 0;
