--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -52,6 +52,10 @@ $navbar-default-bg: #223850;
   border-left:1px solid #333;
   padding:4px;
 }
+.listing{
+  list-style: none;
+  padding-left:0;
+}
   footer{
   margin-top:45px;
   padding-top: 5px;
