--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -33,7 +33,7 @@
       </div>
     </div>
 <% end %>
-    <div class="col-xs-4 col-xs-offest-4">
+    <div align="center">
       [ <%= link_to "Cancel request and return to articles listing", articles_path %> ]
 
     </div>
