--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -37,9 +37,8 @@
       <h4 class="center description"><strong>Description:</strong></h4>
 
       <hr>
-
       <%= simple_format(@article.description) %>
-   <% if logged_in? && (current_user == article.user || current_user.admin?) %>
+   <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
       <div class="article-actions">
 
       <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
