--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -37,10 +37,12 @@
       <h4 class="center description"><strong>Description:</strong></h4>
 
       <hr>
-      <%= simple_format(@article.description) %>
-   <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
+  <%= simple_format(@article.description) %>
+        <% if @article.categories.any? %>
+          <p>Categories: <%= render @article.categories %></p>
+        <% end %>
       <div class="article-actions">
-
+   <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
       <%= link_to "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
 
       <%= link_to "Delete", article_path(@article), method: :delete,
@@ -54,4 +56,4 @@
     </div>
     <% end %>
 </div>
-  </div>
+
