--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -57,7 +57,7 @@ $navbar-default-bg: #223850;
   padding-left:0;
 }
 .badge{
-  background-color: #cc0000;
+  background-color: #223850;
   text-transform: uppercase;
   letter-spacing: -1px;
   font-weight: bold;
