--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,13 @@
 <h2 align="center"><%= "Category: " + @category.name %> </h2>
 <div align="center">
+  <% if logged_in? and current_user.admin? %>
+  <div category="row">
+  <span class="badge"><%= link_to "Edit Category Name", edit_category_path(@category) %></span>
+  </div>
+  <% end %>
   <%= will_paginate @category_articles %>
 </div>
+<br/>
   <%= render 'articles/article', obj: @category_articles %>
 
 
